syntax = "proto3";
package influxdata.iox.deployment.v1;
option go_package = "github.com/influxdata/iox/deployment/v1";

service DeploymentService {
  // Get server ID.
  rpc GetServerId(GetServerIdRequest) returns (GetServerIdResponse);

  // Update server ID.
  rpc UpdateServerId(UpdateServerIdRequest) returns (UpdateServerIdResponse);

}

message GetServerIdRequest {}

message GetServerIdResponse {
  // Must be non-zero
  uint32 id = 1;
}

message UpdateServerIdRequest {
  // Must be non-zero
  uint32 id = 1;
}

message UpdateServerIdResponse {}
